# mcp-registry

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run_server.py  setup.py
app/: health_check.py
app/routers/: health_check.py
docs/: api_key_security.md  endpoint_registration.md  health_check.md  postgres_migration.md
examples/: api_client_example.py  curl_examples.md  endpoint_registration_client.py  secure_registry_proxy.py
examples/curl/: README.md  register_endpoints.bat  register_endpoints.sh  update_application.bat  update_application.sh
prisma/: schema.prisma
src/: __init__.py
src/mcp_registry/: __init__.py  auth.py  config.py  data_agents.py  database.py  endpoint_registration.py  health_check.py  models.py  server.py
src/mcp_registry/static/: index.html
